# foldline

./: .env.example  .gitignore  DOCUMENTATION_INDEX.md  EFF_DONATIONS.md  FOLDLINE_DESIGN_SPEC.md  FOLDLINE_HANDOFF.md  LICENSE  PAYMENT_ARCHITECTURE.md  README.md  package.json  reset_and_test.py  test_api_endpoint.py  test_fit_parsing.py  test_fixed_json.py
.github/workflows/: test.yml
backend/: __init__.py  main.py  pytest.ini  requirements.txt
backend/db/: connection.py  migrate.py  schema.sql
backend/ingestion/: field_mappings.py  fit_folder.py  garmin_gdpr.py  json_parser.py
backend/metrics/: hrv.py  sleep.py  steps.py  stress.py
backend/sync/: __init__.py  garmin_express.py  sync_engine.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_field_mappings.py  test_fit_folder.py  test_garmin_gdpr.py  test_hrv.py  test_sleep.py  test_stress.py
design/: ACCESSIBILITY.md  BRAND_SPEC.md  BRAND_TOKENS.css  CHANGELOG.md  COMPONENT_STATES.md  DATA_TABLES.md  DATA_VISUALIZATION.md  FILE_CONSOLIDATION_STRATEGY.md  FORMS.md  IMPLEMENTATION.md  LAYOUT.md  LOADING_EMPTY_STATES.md  SVG_PATTERNS.md  TYPOGRAPHY.css
docs/: CONTINUAL_SYNC_SPEC.md  PAYMENT_ARCHITECTURE.md  PRE_COMMERCIAL_MVP_PLAN.md  PROJECT_STRUCTURE.md  TESTING_PLAN.md
docs/archive/: IMPLEMENTATION_PLAN.md  (+7 more)
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
marketing/: package.json  vite.config.ts
scripts/: build.sh  dev.sh  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/tests/: integration_test.rs
(+161 files in other folders)
